// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tabs > should  TabsList match snapshot 1`] = `
<DocumentFragment>
  <div
    data-orientation="horizontal"
    dir="ltr"
  >
    <div
      aria-orientation="horizontal"
      class="inline-flex h-9 items-center justify-center rounded-lg bg-muted p-1 text-muted-foreground"
      data-orientation="horizontal"
      role="tablist"
      style="outline: none;"
      tabindex="-1"
    />
  </div>
</DocumentFragment>
`;

exports[`Tabs > should TabsContent  match snapshot 1`] = `
<DocumentFragment>
  <div
    data-orientation="horizontal"
    dir="ltr"
  >
    <div
      aria-labelledby="radix-:r2:-trigger-tab1"
      class="mt-2 ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
      data-orientation="horizontal"
      data-state="inactive"
      hidden=""
      id="radix-:r2:-content-tab1"
      role="tabpanel"
      tabindex="0"
    />
  </div>
</DocumentFragment>
`;

exports[`Tabs > should match snapshot 1`] = `
<DocumentFragment>
  <div
    data-orientation="horizontal"
    dir="ltr"
  />
</DocumentFragment>
`;

exports[`Tabs > should match snapshot 2`] = `
<DocumentFragment>
  <div
    data-orientation="horizontal"
    dir="ltr"
  >
    <div
      aria-orientation="horizontal"
      class="inline-flex h-9 items-center justify-center rounded-lg bg-muted p-1 text-muted-foreground"
      data-orientation="horizontal"
      role="tablist"
      style="outline: none;"
      tabindex="-1"
    />
  </div>
</DocumentFragment>
`;

exports[`Tabs > should match snapshot 3`] = `
<DocumentFragment>
  <div
    data-orientation="horizontal"
    dir="ltr"
  >
    <div
      aria-labelledby="radix-:r2:-trigger-tab1"
      class="mt-2 ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
      data-orientation="horizontal"
      data-state="inactive"
      hidden=""
      id="radix-:r2:-content-tab1"
      role="tabpanel"
      tabindex="0"
    />
  </div>
</DocumentFragment>
`;

exports[`Tabs Components > should  Tabs match snapshot 1`] = `
<DocumentFragment>
  <div
    data-orientation="horizontal"
    dir="ltr"
  />
</DocumentFragment>
`;

exports[`Tabs Components > should  TabsList match snapshot 1`] = `
<DocumentFragment>
  <div
    data-orientation="horizontal"
    dir="ltr"
  >
    <div
      aria-orientation="horizontal"
      class="inline-flex h-9 items-center justify-center rounded-lg bg-muted p-1 text-muted-foreground"
      data-orientation="horizontal"
      role="tablist"
      style="outline: none;"
      tabindex="-1"
    />
  </div>
</DocumentFragment>
`;

exports[`Tabs Components > should TabsContent  match snapshot 1`] = `
<DocumentFragment>
  <div
    data-orientation="horizontal"
    dir="ltr"
  >
    <div
      aria-labelledby="radix-:r2:-trigger-tab1"
      class="mt-2 ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
      data-orientation="horizontal"
      data-state="inactive"
      hidden=""
      id="radix-:r2:-content-tab1"
      role="tabpanel"
      tabindex="0"
    />
  </div>
</DocumentFragment>
`;

exports[`Tabs Components > should TabsTrigger match snapshot 1`] = `
<DocumentFragment>
  <div
    data-orientation="horizontal"
    dir="ltr"
  >
    <div
      aria-orientation="horizontal"
      class="inline-flex h-9 items-center justify-center rounded-lg bg-muted p-1 text-muted-foreground"
      data-orientation="horizontal"
      role="tablist"
      style="outline: none;"
      tabindex="0"
    >
      <button
        aria-controls="radix-:r3:-content-tab1"
        aria-selected="false"
        class="inline-flex items-center justify-center whitespace-nowrap rounded-md px-3 py-1 text-sm font-medium ring-offset-background transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 data-[state=active]:bg-background data-[state=active]:text-foreground data-[state=active]:shadow"
        data-orientation="horizontal"
        data-radix-collection-item=""
        data-state="inactive"
        id="radix-:r3:-trigger-tab1"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Tab 1
      </button>
    </div>
  </div>
</DocumentFragment>
`;
